objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Routing_Segment__c</fullName>
        <inlineHelpText>Routing Segment Stamp after LeanData Routing</inlineHelpText>
        <label>Routing Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Routing_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <formula>TEXT(Account.Sales_territory__c)</formula>
        <label>Sales Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_in_space__c</fullName>
        <label>Signed in space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Name__c</fullName>
        <label>ZI-Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasSubscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit__c</fullName>
        <formula>CASE(mk_customer_fit_segment__c,
&apos;very good&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), 
&apos;good&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), 
&apos;medium&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), &quot;low&quot;,IMAGE(&quot;https://cdn.madkudu.com/images/cross.png&quot;, &quot;Star&quot;, 20, 20),
&quot;&quot;)</formula>
        <label>MK Customer Fit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_utm_medium_c__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_utm_source_c__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmorigcampaign__c</fullName>
        <label>UTM Original Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Employee__c</fullName>
        <formula>if( Account.NumberOfEmployees = 0,NULL,Account.NumberOfEmployees)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Test_Field__c</fullName>
        <label>Admin Test Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if someone has sign up for the ProductMakers Community and opted into receiving emails</description>
        <label>Community Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Engaged_Fit__c</fullName>
        <label>Engaged + Fit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Loss_Reason__c</fullName>
        <inlineHelpText>Reason this contact/lead is unqualified</inlineHelpText>
        <label>Lead Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Loss_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Status__c</fullName>
        <label>Marketing Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>webinar_participant</fullName>
                    <label>Webinar participant</label>
                </value>
                <value>
                    <fullName>event_speaker</fullName>
                    <label>Event speaker</label>
                </value>
                <value>
                    <fullName>sales_reference</fullName>
                    <label>Sales reference</label>
                </value>
                <value>
                    <fullName>mediaPRreference</fullName>
                    <label>Media/ PR reference</label>
                </value>
                <value>
                    <fullName>analyst_inquiry</fullName>
                    <label>Analyst inquiry</label>
                </value>
                <value>
                    <fullName>donotcontact</fullName>
                    <label>Do not contact</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Maker_Seats__c</fullName>
        <inlineHelpText># paid projects where this contact has admin or editor role</inlineHelpText>
        <label>Paid Maker Seats</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription - All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Team_Size__c</fullName>
        <label>Survey Team Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>my team</fullName>
                </value>
                <value>
                    <fullName>my whole company</fullName>
                </value>
                <value>
                    <fullName>myself only</fullName>
                </value>
                <value>
                    <fullName>several teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Project_Role__c</fullName>
        <description>Top project role on a paid project/space</description>
        <formula>If( Contains(Paid_Project_Roles__c ,&quot;admin&quot;),&quot;admin&quot;,
  IF ( Contains(Paid_Project_Roles__c ,&quot;editor&quot;),&quot;editor&quot;,
     IF( Contains(Paid_Project_Roles__c ,&quot;contributor&quot;),&quot;contributor&quot;,
        IF( Contains(Paid_Project_Roles__c ,&quot;viewer&quot;),&quot;viewer&quot;,&quot;&quot;))))</formula>
        <inlineHelpText>Top project role on a paid project/space</inlineHelpText>
        <label>Top Project Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Request_DT__c</fullName>
        <label>Trial Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>account6QA6sense__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The 6QA status of the account for the product.

The values are either:
1 = 6QA
0= Not 6QA</description>
        <label>6sense Account 6QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_utm_content_c__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_cb_Last_Name__c</fullName>
        <label>tmp cb Last Name</label>
        <length>230</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Sales__c</fullName>
        <formula>Assigned_to_SDR__c ||  Assigned_to_Solution_Sales__c ||  Assigned_to_Velocity_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if assigned to any of the sales or SDR teams</inlineHelpText>
        <label>Assigned to Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Domain_Type__c</fullName>
        <formula>If( Contains(Lower(Email_Domain_Parse__c),&quot;yahoo&quot;),&quot;Personal&quot;,
If( Contains(Lower(Email_Domain_Parse__c),&quot;hotmail&quot;),&quot;Personal&quot;,
Case( Lower(Email_Domain_Parse__c) ,
&quot;gmail.com&quot;,&quot;Personal&quot;,
&quot;googlemail.com&quot;,&quot;Personal&quot;,
&quot;aol.com&quot;,&quot;Personal&quot;,
&quot;mac.com&quot;,&quot;Personal&quot;,
&quot;outlook.com&quot;,&quot;Personal&quot;,
&quot;icloud.com&quot;,&quot;Personal&quot;,
&quot;live.com&quot;,&quot;Personal&quot;,
&quot;mail.ru&quot;,&quot;Personal&quot;,
&quot;mailinator.com&quot;,&quot;Personal&quot;,
&quot;me.com&quot;,&quot;Personal&quot;,
&quot;seznam.cz&quot;,&quot;Personal&quot;,
&quot;yandex.ru&quot;,&quot;Personal&quot;,
&quot;yopmail.com&quot;,&quot;Personal&quot;,
&quot;urhen.com&quot;,&quot;Personal&quot;,
&quot;protonmail.com&quot;,&quot;Personal&quot;,
&quot;163.com&quot;,&quot;Personal&quot;,
&quot;gmx.de&quot;,&quot;Personal&quot;,
&quot;email.cz&quot;,&quot;Personal&quot;,
&quot;ya.ru&quot;,&quot;Personal&quot;,
&quot;comcast.net&quot;,&quot;Personal&quot;,
&quot;ymail.com&quot;,&quot;Personal&quot;,
&quot;Work Email&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks email domain to see if personal or work email</inlineHelpText>
        <label>Email Domain Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Action__c</fullName>
        <inlineHelpText>Call to Action for LeanData to Route</inlineHelpText>
        <label>LD Routing Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_Contacted_Date__c</fullName>
        <label>LS - Contacted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MKT_Inferred_City__c</fullName>
        <label>[MKT] Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to separate the email marketing opt outs that happen in marketo. This is a separate field from the email opt out that outreach is uses.</description>
        <label>Marketing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paying_Customer_A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there exist at least one active project user (role doesn&apos;t matter) related to this contact on paying Project</description>
        <label>Paying Customer [A]</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Request_DT__c</fullName>
        <label>Portal Request DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pref_60_Day_Pause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pref 60-Day Pause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Blog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription - Blog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Usage_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Usage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>Lead Score (from Marketo)</description>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi_utm_campaign_c__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Last_Activity__c</fullName>
        <formula>Account.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last Activity date on account, for list views</inlineHelpText>
        <label>Acct Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Test_Formula__c</fullName>
        <formula>IF(TS_Lead_Created_Date__c-datevalue( CreatedDate )&lt;0,TS_Lead_Created_Date__c,datevalue( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Test Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asked_for_discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asked for discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Seniority_Clean__c</fullName>
        <formula>Case( lower(Seniority__c ),
&quot;executive&quot;,&quot;5. c-level&quot;,
&quot;c-level&quot;,&quot;5. c-level&quot;,
&quot;non-manager&quot;,&quot;1. other&quot;,
&quot;&quot;,&quot;1. other&quot;,
&quot;manager&quot;,&quot;2. manager&quot;,
&quot;director&quot;,&quot;3. director&quot;,
&quot;vp-level&quot;,&quot;4. vp-level&quot;,
&quot;vp&quot;,&quot;4. vp-level&quot;,
&quot;not found&quot;,&quot;not found&quot;,
lower(Seniority__c )
)</formula>
        <inlineHelpText>Formula for clean seniority level field</inlineHelpText>
        <label>CB Seniority (Clean)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Name__c</fullName>
        <formula>Owner.Full_Name__c</formula>
        <label>Contact Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Team__c</fullName>
        <formula>Text(Owner.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contact Owner&apos;s team lookup from User Record</inlineHelpText>
        <label>Contact Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Domain_Parse__c</fullName>
        <description>Domain from email</description>
        <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email (Domain Parse)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscribers who would like to receive an email when a new integration goes live.</description>
        <label>Integration Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_ID__c</fullName>
        <formula>Latest_Campaign__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Latest Campaign ID</inlineHelpText>
        <label>Latest Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MKT_Inferred_State__c</fullName>
        <label>[MKT] Inferred State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_created_user__c</fullName>
        <label>Notes created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Project_Plans__c</fullName>
        <inlineHelpText>List of Plan Types across all paid project where the contact is</inlineHelpText>
        <label>Paid Project Plans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Project_Roles__c</fullName>
        <description>List of active roles from project user records for paid projects</description>
        <inlineHelpText>List of active roles from project user records for paid projects</inlineHelpText>
        <label>Paid Project Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_External_ID__c</fullName>
        <label>Person External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roadmap_shown_user__c</fullName>
        <label>Roadmap shown user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDR_Routing_Reason__c</fullName>
        <label>SDR Routing Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Contact_Id__c</fullName>
        <label>Slintel Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starter_Request_DT__c</fullName>
        <label>Starter Request DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value_Survey_Score__c</fullName>
        <description>1-5 score the customer selected in the automated in-app Value Survey. 1 is negative 5 is positive. This field is used to launch automated reply based on the customer&apos;s rating.</description>
        <inlineHelpText>1-5 score the customer selected in the automated in-app Value Survey. 1 is negative 5 is positive. This field is used to launch automated reply based on the customer&apos;s rating.</inlineHelpText>
        <label>Value Survey Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZD_Zendesk_User_ID__c</fullName>
        <inlineHelpText>ID for the Zendesk User(person)</inlineHelpText>
        <label>Zendesk User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Website__c</fullName>
        <inlineHelpText>ZoomInfo company website</inlineHelpText>
        <label>ZI-Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>contactGrade6sense__c</fullName>
        <description>A measure of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Contact Grade </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Description__c</fullName>
        <label>Account Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Lead_Source__c</fullName>
        <formula>Text(LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Copy of Lead Source Field</inlineHelpText>
        <label>Contact Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Alias__c</fullName>
        <formula>Owner.Alias</formula>
        <inlineHelpText>Contact Owner Alias</inlineHelpText>
        <label>Contact Owner Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Behavior_Score__c</fullName>
        <label>Behavior Score 2022</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Allowed_to_MQL__c</fullName>
        <label>Date Allowed to MQL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_created_user__c</fullName>
        <label>Driver created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FT_Survey_of_Makers__c</fullName>
        <formula>Text(Len( Paid_Project_Roles__c ) - Len (Substitute(Paid_Project_Roles__c,&quot;;&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text Value of picklist &quot;Survey # Makers&quot; for rollup to opportunity</inlineHelpText>
        <label>Paid Projects</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handraise_Submitted__c</fullName>
        <label>Handraise Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LD_Last_Routed_Days__c</fullName>
        <formula>If( IsNull(LD_Routing_Date__c ),9999,
  Now()- LD_Routing_Date__c )</formula>
        <inlineHelpText>Days since last ld routed</inlineHelpText>
        <label>LD Last Routed Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LD_Re_Trigger_Field__c</fullName>
        <label>[LD] Re-Trigger Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_MQL_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest MQL Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts (Latest MQL Campaign)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MQLed_by_Sales_Date__c</fullName>
        <inlineHelpText>Date Handraisers MQLed by Sales</inlineHelpText>
        <label>MQLed by Sales Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes_created_space__c</fullName>
        <label>Notes created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productboard_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Productboard Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roadmap_shown_space__c</fullName>
        <label>Roadmap shown space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Email Opt Out_Depriciated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription - Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Company_Size__c</fullName>
        <label>Survey Product Manager Team  Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 2</fullName>
                </value>
                <value>
                    <fullName>3 - 10</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
                <value>
                    <fullName>1 - 3</fullName>
                </value>
                <value>
                    <fullName>4 - 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Product_Type__c</fullName>
        <label>Survey Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a digital product</fullName>
                </value>
                <value>
                    <fullName>a non-digital product</fullName>
                </value>
                <value>
                    <fullName>agency projects</fullName>
                </value>
                <value>
                    <fullName>an internal tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Activation_DT__c</fullName>
        <label>Trial Activation DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZI_Management_Level__c</fullName>
        <inlineHelpText>ZoomInfo Management Level</inlineHelpText>
        <label>ZI-Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_cb_Company_Name__c</fullName>
        <label>tmp cb Company Name</label>
        <length>230</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Active__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is contact owner active</inlineHelpText>
        <label>Contact Owner Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_created_space__c</fullName>
        <label>Driver created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Editors_invited_user__c</fullName>
        <label>Editors invited user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_created_user__c</fullName>
        <label>Feature created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Routed_to_Team__c</fullName>
        <inlineHelpText>First Sales Owner Team Name, Lean Data Routed</inlineHelpText>
        <label>First Routed to Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Meeting_Date__c</fullName>
        <label>Initial Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Date__c</fullName>
        <inlineHelpText>The latest date added to a campaign as an active response</inlineHelpText>
        <label>Latest Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Name__c</fullName>
        <formula>Latest_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign_Type__c</fullName>
        <inlineHelpText>The Type of the latest campaign response</inlineHelpText>
        <label>Latest Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_Inferred_Country__c</fullName>
        <label>[MKT] Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Trial_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if record was created by Marketo Try Now Form</description>
        <label>Marketo Trial Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Prospect_ID__c</fullName>
        <label>Outreach Prospect ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pipeline_Opportunity__c</fullName>
        <label>Pipeline Opportunity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Portal_Activation_DT__c</fullName>
        <label>Portal Activation DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_created_user__c</fullName>
        <label>Release created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_printed_user__c</fullName>
        <label>Roadmap printed user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_product_team__c</fullName>
        <label>Size of product team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smart_Touched_manual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check true if there was a Smart Touch interaction.</description>
        <inlineHelpText>Check true if there was a Smart Touch interaction.</inlineHelpText>
        <label>Smart Touched (manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snippet_created_user__c</fullName>
        <label>Snippet created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription - Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TS_Lead_Created_Date__c</fullName>
        <label>[TS] Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TS_Lead_Created_Time__c</fullName>
        <label>[TS] Lead Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>View_customized_user__c</fullName>
        <label>View customized user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Viewers_invited_user__c</fullName>
        <label>Viewers invited user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status_Number__c</fullName>
        <formula>value(left(text(  Contact_Status__c  ),3)

/* if(ISPICKVAL( Status , &quot;New&quot;),1.0, 
if(ISPICKVAL( Status , &quot;Qualified&quot;),5.2, */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status (#)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editors_invited_space__c</fullName>
        <label>Editors invited space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_created_space__c</fullName>
        <label>Feature created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Sequence_Date__c</fullName>
        <label>Initial Sequence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Persona_Name__c</fullName>
        <label>Outreach Persona Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_created_space__c</fullName>
        <label>Release created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_printed_space__c</fullName>
        <label>Roadmap printed space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snippet_created_space__c</fullName>
        <label>Snippet created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starter_Activation_DT__c</fullName>
        <label>Starter Activation DT</label>
        <type>DateTime</type>
    </fields>
</CustomObject>